# lang

./: .gitignore  Cargo.toml  Justfile
compiler/parser/: Cargo.toml
compiler/parser/fuzz/: Cargo.toml
compiler/parser/fuzz/fuzz_targets/: parser.rs
compiler/parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  span.rs
compiler/parser/tests/: ui.rs
compiler/parser/tests/ui/: dot_integer.test  float.test  integer.lg.expected-parse  integer.lg.expected-parse-errors  integer.lg.test
compiler/parser/tests/ui/arith/: add-prec.lg.expected-parse  add-prec.lg.test  add-sub-prec.lg.expected-parse  add-sub-prec.lg.test  add.lg.expected-parse  add.lg.test  div.lg.expected-parse  div.lg.test  mul-div-prec.lg.expected-parse  mul-div-prec.lg.test  mul.lg.expected-parse  mul.lg.test  sub-prec.lg.expected-parse  sub-prec.lg.test  sub.lg.expected-parse  sub.lg.test
compiler/parser/tests/ui/expr/: deref.lg.expected-parse  deref.lg.test  ref.lg.expected-parse  ref.lg.test
compiler/parser/tests/ui/ident/: ident.lg.expected-parse  ident.lg.test  invalid.lg.expected-parse  underscore_start.lg.expected-parse  underscore_start.lg.test
compiler/parser/tests/ui/literal/: dot_integer.expected-parse  false.lg.expected-parse  false.lg.test  float_exp.expected-parse  float_sci.expected-parse  float_sci.test  integer_dot_sci.test  true.lg.expected-parse  true.lg.test
compiler/parser/tests/ui/number/: dot_integer.expected-parse  dot_integer.expected-parse-errors  float.expected-parse  float_exp.expected-parse  float_exp.test  float_sci.expected-parse  integer.lg.expected-parse  (+2 more)
(+41 files in other folders)
