[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = '0.2'
memchr = '2'
thiserror = '1'
ustr = '0.9'

derive-ast-node = { path = '../derive-ast-node' }

[dev-dependencies]
walkdir = '2'
anyhow = '1'
owo-colors = '3'
differ = '1'

[dev-dependencies.clap]
version = '3'
features = ['env']

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[profile.bench]
debug = true